--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 plugins {
     id 'java'
+    id 'io.freefair.lombok' version '5.3.0'
 }
 
 group 'ru.netology'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
-
-//
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
-
 
 repositories {
     mavenCentral()
@@ -19,6 +17,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:5.19.0'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
